@@ -1,3 +1,7 @@
+2002-09-18  Andrew Cagney  <ac131313@redhat.com>
+
+	* i386-linux-tdep.h: Fix tipo.
+
 2002-09-18  Adam Fedor  <fedor@gnu.org>
 
 	* MAINTAINERS: Add myself to the Write After Approval list.
